Fix scss syling spilling into rest of site

--- a/client/src/components/Profile/Profile.scss
+++ b/client/src/components/Profile/Profile.scss
@@ -1,4 +1,4 @@
-section {
+.profile {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -6,22 +6,23 @@ section {
   margin-left: 1%;
   padding: 1% 4%;
   border: 1px solid #D7D0CF;
+
+  .welcome {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: flex-start
+  }
+  
+  h1 {
+    color: #673B1D;
+    font-weight: 300;
+    font-size: 2em;
+    margin-bottom: 0;
+  }
+  h2 {
+    color: #673B1D;
+    font-weight: 300;
+  }
 }
 
-article {
-  display: flex;
-  flex-direction: column;
-  align-items: start;
-  justify-content: flex-start
-}
-
-h1 {
-  color: #673B1D;
-  font-weight: 300;
-  font-size: 2em;
-  margin-bottom: 0;
-}
-h2 {
-  color: #673B1D;
-  font-weight: 300;
-}
